chore: prevent scrollbar in content on desktop

--- a/src/patterns/ProgressWizard/_progressWizard.scss
+++ b/src/patterns/ProgressWizard/_progressWizard.scss
@@ -74,7 +74,7 @@
 
     &__content {
       flex: 1 1 auto;
-      overflow-y: auto;
+      overflow-y: visible;
     }
 
     &__footer {
